# CLIMath

./: CMakeLists.txt  README.md  SymbolTable.c  SymbolTable.h  compile.sh  errors.c  main.c  preload.h  requisitosPractica3Compiladores
firstBSONTests/mfcalc/: compile.sh  mfcalc.tab.c  mfcalc.y
firstBSONTests/mfclacSeparado/: SymbolTable.c  SymbolTable.h  analizadorLexico.c  analizadorLexico.h  compile.sh  dataStructure.c  dataStructure.h  errors.c  errors.h  lex.yy.c  lex.yy.h  lexicalAnalyzer.l  main.c  mfcalc.tab.c  mfcalc.tab.h  mfcalc.y  preload.c  preload.h  test  testFile
firstBSONTests/rpcalc/: compile.sh  rpcalc.tab.c  rpcalc.y
